   - an attempt to read from or write to the registry fails.
* Vectors are now used as a replacement for all dynamically allocated arrays, 
   ensuring the arrays are automatically deleted when they go out of scope.
* Renamed CToolbar to CToolBar, CStatusbar to CStatusBar, CRebar to CReBar
   and CMenubar to CMenuBar.
* The following function now return CWnd* instead of HWND:
   GetParent, GetAncestor, GetCapture, GetFocus, SetFocus, GetDlgItem, GetWindow,
   GetLastACtivePopup, GetTopWindow, SetParent, SetCapture   

Changes in detail
-----------------
Added CAnimation
Added CComboBox  
Added CComboBoxEx
Added CProgressBar 
Added CResizer 
Added CScrollBar 
Added CSlider 
Added CSpinButton
Added Shared_Ptr
Added CThread 
Updated CSocket to support IPv6
Added CPropertySheet::SetIcon
Added CPropertyPage::SetWizardButtons
Added CPropertyPage::QuerySiblings
Added CRebar::SizeToRect
Added CSocket::IsIPV6Supported
Added CSocket::FreeAddrInfo
Added CSocket::GetAddrInfo
Added CSocket::GetLastError
Added CTabbedMDI::SetActiveMDITab
Added CToolBar::AddButtons
Added CToolBar::AddString
Added CToolBar::AutoSize
Added CToolBar::CheckButton 
Added CToolBar::DeleteButton   
Added CToolBar::GetButton
Added CToolBar::GetButtonSize
Added CToolBar::GetButtonText
Added CToolBar::GetDisabledImageList
Added CToolBar::GetHotItem
Added CToolBar::GetImageList
Added CToolBar::GetPadding
Added CToolBar::GetRect
Added CToolBar::GetRows
Added CToolBar::GetTextRows
Added CToolBar::GetToolTips
Added CToolBar::HideButton
Added CToolBar::Indeterminate
Added CToolBar::InsertButton
Added CToolBar::IsButtonHidden
Added CToolBar::IsButtonHighlighted
Added CToolBar::IsButtonIndeterminate
Added CToolBar::IsButtonPressed
Added CToolBar::MapAccelerator
Added CToolBar::MarkButton
Added CToolBar::MoveButton
Added CToolBar::PressButton
Added CToolBar::SaveRestore
Added CToolBar::SetDisabledImageList
Added CToolBar::SetDrawTextFlags
Added CToolBar::SetExtendedStyle
Added CToolBar::SetHotImageList